--- a/wechat/app.json
+++ b/wechat/app.json
@@ -23,7 +23,7 @@
     "backgroundColor": "#888",
     "backgroundTextStyle": "#01C66C",
     "navigationBarBackgroundColor": "#01C66C",
-    "navigationBarTitleText": "好e赔",
+    "navigationBarTitleText": "你我保",
     "navigationBarTextStyle": "#fff"
   }
 }
