key:图片上传问题

--- a/wechat/project.config.json
+++ b/wechat/project.config.json
@@ -9,7 +9,7 @@
 	},
 	"compileType": "miniprogram",
 	"libVersion": "1.5.4",
-	"appid": "wx65a8c950e465b808",
+	"appid":"wx1dd9515a80f6187d",
 	"projectname": "zhongche",
 	"condition": {
 		"search": {
