--- a/project.config.json
+++ b/project.config.json
@@ -3,13 +3,13 @@
 	"svr": "./server",
 	"miniprogramRoot": "./wechat",
 	"qcloudRoot": "./server",
-	"appid": "wx65a8c950e465b808",
-	"projectname": "wechat1.0.0",
+	"appid": "wx1dd9515a80f6187d",
+	"projectname": "wechat1.0.1",
 	"setting": {
 		"urlCheck": true,
 		"es6": true,
 		"postcss": true,
-		"minified": true,
+		"minified": false,
 		"newFeature": true
 	},
 	"libVersion": "1.9.93",
