--- a/wechat/app.json
+++ b/wechat/app.json
@@ -13,7 +13,11 @@
     "pages/doubleroom/roomname/roomname",
     "pages/doubleroom/fieldViewRecord/fieldViewRecord",
     "pages/doubleroom/photoList/photoList",
-    "pages/doubleroom/creatOrder/creatOrder"
+    "pages/doubleroom/creatOrder/creatOrder",
+    "pages/picklist/surveyMap/surveyMap",
+    "pages/picklist/surveyList/surveyList",
+    "pages/picklist/videoAndPicture/videoAndPicture",
+    "pages/picklist/redPacket/redPacket"
     
   ],
   "networkTimeout": {
