--- a/project.config.json
+++ b/project.config.json
@@ -6,12 +6,45 @@
 	"appid": "wx1dd9515a80f6187d",
 	"projectname": "wechat1.0.1",
 	"setting": {
-		"urlCheck": false,
+		"urlCheck": true,
 		"es6": true,
 		"postcss": true,
 		"minified": false,
 		"newFeature": true
 	},
 	"libVersion": "1.9.93",
-	"condition": {}
+	"condition": {
+		"search": {
+			"current": -1,
+			"list": []
+		},
+		"conversation": {
+			"current": -1,
+			"list": []
+		},
+		"plugin": {
+			"current": -1,
+			"list": []
+		},
+		"game": {
+			"list": []
+		},
+		"miniprogram": {
+			"current": -1,
+			"list": [
+				{
+					"id": 0,
+					"name": "upDate",
+					"pathName": "pages/main/main",
+					"query": ""
+				},
+				{
+					"id": -1,
+					"name": "upDate",
+					"pathName": "pages/main/main",
+					"query": ""
+				}
+			]
+		}
+	}
 }
