--- a/wechat/project.config.json
+++ b/wechat/project.config.json
@@ -1,15 +1,15 @@
 {
 	"description": "项目配置文件。",
 	"setting": {
-		"urlCheck": true,
-		"es6": true,
-		"postcss": true,
-		"minified": true,
+		"urlCheck": false,
+		"es6": false,
+		"postcss": false,
+		"minified": false,
 		"newFeature": true
 	},
 	"compileType": "miniprogram",
-	"libVersion": "1.5.4",
-	"appid":"wx1dd9515a80f6187d",
+	"libVersion": "2.0.2",
+	"appid": "wx1dd9515a80f6187d",
 	"projectname": "zhongche",
 	"condition": {
 		"search": {
